<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cloud_hermits.recorder.pages.list.ListActivity">
    <item
        android:id="@+id/match_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_config_24dp"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/member_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/member_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>
