<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_red_to_blue_horizontal"
    android:orientation="vertical">

    <!--  头部  -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@drawable/bg_red_to_blue_horizontal"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="1dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!--  时间  -->
            <TextView
                android:id="@+id/timer_field"
                android:drawablePadding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/default_time"
                android:textSize="54sp"
                android:textStyle="bold"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <!--  角色  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">

                <EditText
                    android:id="@+id/red_side_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:paddingTop="24dp"
                    android:paddingBottom="24dp"
                    android:selectAllOnFocus="true"
                    android:text="红方"
                    android:textSize="21sp"
                    tools:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/vs"
                    android:textSize="21sp" />

                <EditText
                    android:id="@+id/blue_side_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingTop="24dp"
                    android:paddingBottom="24dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:text="蓝方"
                    android:textSize="21sp"
                    tools:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!--  计分区域  -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_red_to_blue_vertical"
            android:orientation="vertical"
            android:theme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorRedSide"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_sub_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_navigate_before_black_24dp"
                        app:backgroundTint="@color/colorBlueSide"
                        app:elevation="0dp"
                        app:fabSize="mini" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/red_score_field"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_score"
                    android:textSize="72sp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_plus_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_navigate_next_black_24dp"
                        app:backgroundTint="@color/colorBlueSide"
                        app:elevation="0dp"
                        app:fabSize="mini" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/blue_area"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorBlueSide"
                android:orientation="horizontal"
                android:paddingBottom="32dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_sub_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_navigate_before_black_24dp"
                        app:backgroundTint="@color/colorRedSide"
                        app:elevation="0dp"
                        app:fabSize="mini" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/blue_score_field"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_score"
                    android:textSize="72sp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_plus_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_navigate_next_black_24dp"
                        app:backgroundTint="@color/colorRedSide"
                        app:elevation="0dp"
                        app:fabSize="mini" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_action"
            android:layout_width="176dp"
            android:layout_height="176dp"
            android:layout_marginEnd="-88dp"
            app:elevation="0dp"
            app:fabSize="auto"
            app:layout_anchor="@id/blue_area"
            app:layout_anchorGravity="end" />


        <ImageView
            android:id="@+id/fab_icon"
            android:layout_width="68dp"
            android:layout_height="88dp"
            android:layout_marginEnd="-8dp"
            android:src="@drawable/ic_play"
            android:translationZ="99dp"
            app:layout_anchor="@id/blue_area"
            app:layout_anchorGravity="end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>